# fri

./: .eslintrc.json  .gitignore  .vercelignore  COMPLETION-SUMMARY.txt  README.md  jest.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
__tests__/: README.md
app/: loading.tsx  page.tsx
dev/: .env.example  PHASE-3-POLISH-COMPLETE.md  PHASE-3-SPRINT-3.6-COMPLETION.md  eslint.config.mjs  jest.config.js  jest.polyfills.js  jest.setup.js  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: PERFORMANCE-OPTIMIZATION.md
lib/: auth.test.ts  auth.ts  email.ts
mobile/: App.tsx  README.md  package.json
notes/: AI-TOOL-241-LEGAL-WEB-SEARCH.md  DEVELOPMENT-STRATEGY.md  PHASE-1-FIXES-SUMMARY.md  PHASE-12-1-3-COMPLETION.md  PHASE-12-16-IMPLEMENTATION-GUIDE.md  PHASE-12-COMPLETE-PART1.md  PHASE-12-COMPLETE-PART2.md  PHASE-12-COMPLETE-PART3.md  PHASE-12-COMPLETE-PART4.md  PHASE-12.1.1-IMPLEMENTATION-COMPLETE.md  PHASE-12.1.2-IMPLEMENTATION-COMPLETE.md  PHASE-12.1.4-IMPLEMENTATION-COMPLETE.md  PHASE-13-ENTERPRISE-INTEGRATIONS.md  PHASE-14-MARKETPLACE-API.md  PHASE-15-SCALE-GROWTH.md  PHASE-16-MOBILE-ADVANCED.md  PHASE-2-COMPLETION.md  PHASE-3-COMPLETION-SUMMARY.md  PHASE-3-COMPLETION.md  PHASE-3-FINAL-VERIFICATION.md  PHASE-3-IMPLEMENTATION-PLAN.md  PHASE-3-MVP-TOOLS-SELECTION.md  PHASE-4-COMPLETION-FINAL.md  ai-agents.md  (+37 more)
sdk/python/: README.md  pyproject.toml
sdk/python/frithai/: __init__.py  client.py  exceptions.py  types.py
sdk/python/tests/: test_client.py
(+645 files in other folders)
